Updated names of three different renderings of XML file from messy names to Transcription, Expanded Abbreviations, and Regularized Text. Removed the lightgray background from the text column.

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
   margin-left: 70px; /* Space for folio numbers and line numbers*/
   position: relative; /* Enable positioning context */
   line-height: 1.2;
-  background-color: lightgray; /* Temporary background to check if column break is appearing */
+  background-color: transparent
 }
 
 .folio-number {
