--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,38 @@
+/* Navigation styling */
+.sidebar {
+  position: fixed;
+  width: 200px;
+  left: 0;
+  top: 0;
+  height: 100vh;
+  overflow-y: auto;
+  border-right: 1px solid #eee;
+  z-index: 1000;
+}
+
+/* Main content adjustment */
+.column-body-outset {
+  margin-left: 250px;  /* sidebar width + padding */
+  width: calc(100% - 270px);
+}
+
 /* Container for all columns */
 .layout-row {
   max-height: 80vh;
   overflow-y: auto;
   position: relative;
-  margin-left: 6em;
-  width: calc(100% - 8em);
+  margin-left: 4em;
+  width: calc(100% - 5em);
 }
 
 /* Base column styles */
 .column {
   transition: opacity 0.3s ease;
   opacity: 0.7;
-  padding: 0.1em;
-  margin: 0 0.2em;
+  padding: 0.05em;
+  width: 3%;
+  margin: 0 0.1em;
+  left: 40px;
   position: relative;
   max-height: none;
   overflow-y: visible;
@@ -36,10 +56,18 @@
   opacity: 1;
 }
 
+/* Container positioning */
+.column:first-child {
+  position: relative; /* Ensure absolute positioning context */
+  margin-left: 40px; /* Space for numbers */
+}
+
 /* Numbers only in first column */
 .column:first-child .line-number {
   position: absolute;
-  left: -35px;
+  margin-left: 0;
+  left: -35px !important;
+  z-index: 1;
   font-family: "Helvetica", sans-serif;
   color: #999;
   font-size: 0.8em;
@@ -47,7 +75,8 @@
 
 .column:first-child .folio-number {
   position: absolute;
-  left: -30px;
+  margin-left: 0;
+  left: -30px !important;
   font-family: "Palatino", serif;
   font-style: italic;
   color: #666;
@@ -62,13 +91,16 @@
 
 /* Content spacing */
 .edition-text {
-  margin-left: 25px;
+  margin-left: 40;
+  position: relative;
   line-height: 1.2;
 }
 
 .column-break {
-  margin-bottom: 2em;
-  margin-left: 25px;
+  display: block;
+  margin-bottom: 1em;
+  margin-top: 1em;
+  margin-left: 40px;
   position: relative;
   line-height: 1.2;
   background-color: transparent;
