--- a/styles.css
+++ b/styles.css
@@ -114,8 +114,8 @@
 .portrait-column {
   padding: 0.5em;
   margin-left: 0;
-  min-width: 300px;
-  width: 100%;
+  min-width: 400px;
+  width: auto;
   transition: opacity 0.3s ease;
   opacity: 0.7;
 }
@@ -134,4 +134,30 @@
 .portrait-column-container {
   margin-left: 220px;
   width: calc(100% - 240px);
+}
+
+.text-container {
+  position: relative;
+  width: fit-content;
+  min-width: 100%;
+}
+
+.default-text, .hover-text {
+  transition: opacity 0.3s ease;
+  white-space: nowrap;
+}
+
+.hover-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+}
+
+.text-container:hover .default-text {
+  opacity: 0;
+}
+
+.text-container:hover .hover-text {
+  opacity: 1;
 }
