--- a/styles.css
+++ b/styles.css
@@ -225,6 +225,11 @@
 
 .negation {
   background-color: rgba(135, 206, 250, 0.5); /* sky blue */
+  background-image: 
+    linear-gradient(45deg, rgba(0, 0, 128, 0.1) 25%, transparent 25%), 
+    linear-gradient(-45deg, rgba(0, 0, 128, 0.1) 25%, transparent 25%);
+  background-size: 10px 10px;
+  padding-bottom: 1px;
 }
 
 .color-word {
