--- a/docs/styles.css
+++ b/docs/styles.css
@@ -401,8 +401,9 @@ body {
   left: -25px;
   width: 25px;
   text-align: right;
+  white-space: nowrap;
   font-style: italic;
   color: #666;
-  font-size: 0.8em;
+  font-size: 0.75em;
   font-family: "Palatino", serif;
 }
